# mcp

./: .gitignore  .roborev.toml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: .env.example  claude_desktop_config.json  greybeam.yaml
src/greybeam_mcp/: __main__.py  cancel.py  config.py  dispatcher.py  init.py  logging_setup.py  server.py
src/greybeam_mcp/child/: catalog.py  client.py  config_writer.py  manager.py
src/greybeam_mcp/greybeam/: connection.py
src/greybeam_mcp/tools/: cortex_analyst.py  cortex_analyst_client.py  cortex_analyst_parser.py  registry.py  run_snowflake_query.py
tests/contract/: test_child_tools_list_snapshot.py  test_owned_tool_contracts.py
tests/contract/fixtures/: child_tools_list.json  cortex_analyst.json  run_snowflake_query.json
tests/integration/: test_run_snowflake_query_e2e.py
tests/unit/: test_cancel.py  test_catalog.py  test_child_client.py  test_child_config_writer.py  test_child_manager.py  test_config.py  test_connection.py  test_cortex_analyst.py  test_cortex_analyst_client.py  test_cortex_analyst_parser.py  test_dispatcher.py  test_init_wizard.py  test_logging.py  test_registry.py  test_run_snowflake_query_async.py  test_run_snowflake_query_worker.py  test_server_bootstrap.py  test_server_handlers.py  test_upstream_invocation.py
