[project]
name = "greybeam-mcp"
version = "0.1.0"
description = "MCP server that routes SQL queries through the Greybeam proxy while delegating Cortex Search to upstream Snowflake MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "snowflake-connector-python>=3.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    # Pin upstream exactly per spec invariant.
    "snowflake-labs-mcp==1.4.1",
]

[project.scripts]
greybeam-mcp = "greybeam_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "respx>=0.21.0",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greybeam_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
